# dreamright

./: .env  .gitignore  CLAUDE.md  FUNCTIONAL_TEST_PLAN.md  README.md  TEST_PLAN.md  batch_generate.py  pyproject.toml  run_batch_awake.sh  run_batch_with_env.sh  swagger_server.py  test_panel_gen.py  viewer.py
apps/api/: pyproject.toml
apps/api/src/dreamright_api/: app.py  deps.py  schemas.py
apps/api/src/dreamright_api/routes/: __init__.py  assets.py  chapters.py  characters.py  jobs.py  locations.py  panels.py  projects.py  story.py
apps/cli/: pyproject.toml
apps/cli/src/dreamright_cli/: __init__.py  cli.py
apps/viewer/: pyproject.toml
apps/viewer/src/dreamright_viewer/: __init__.py  viewer.py
dreamright/: __init__.py  cli.py  gemini_client.py  models.py  storage.py
dreamright/api/: __init__.py  app.py  deps.py  schemas.py
dreamright/api/routes/: assets.py  chapters.py  characters.py  jobs.py  locations.py  panels.py  projects.py  story.py
dreamright/generators/: chapter.py  character.py  location.py  panel.py  story.py
dreamright/services/: chapter.py  character.py  location.py  panel.py  project.py  story.py
dreamright/templates/: panel.py
dreamright/utils/: __init__.py
projects/midnight-delivery/: project.json
projects/the-last-hunter/: project.json
projects/time-loop-detective/: project.json
projects/time-loop-detective/assets/characters/detective-kaelen-vance/: portrait.json
projects/vampire-academy/: project.json  run_batch_with_env.sh
projects/vampire-academy/assets/characters/elara/: portrait.json  sheet.json
projects/vampire-academy/assets/characters/headmaster-vane/: portrait.json  sheet.json
projects/vampire-academy/assets/characters/kael/: portrait.json  sheet.json
projects/vampire-academy/assets/characters/ren/: portrait.json  sheet.json
projects/vampire-academy/assets/locations/the-dormitory-rooftop/: reference.json
projects/vampire-academy/assets/locations/the-grand-hall/: reference.json
projects/vampire-academy/assets/locations/the-poison-greenhouse/: reference.json
projects/vampire-academy/assets/panels/chapter-1/scene-1/: panel-1.json  panel-2.json  panel-3.json  panel-4.json  panel-5.json  panel-6.json
projects/vampire-academy/assets/panels/chapter-1/scene-2/: panel-1.json  panel-2.json  panel-3.json  panel-5.json  panel-6.json
projects/vampire-academy/assets/panels/chapter-1/scene-3/: panel-1.json  panel-2.json  panel-3.json  panel-4.json  panel-5.json  panel-6.json
projects/vampire-academy/assets/panels/chapter-2/scene-1/: panel-1.json  panel-2.json  panel-3.json  panel-4.json  panel-5.json  panel-6.json
test-webtoon/: project.json
