[project]
name = "dreamright"
version = "0.1.0"
description = "AI-powered webtoon and short-form drama production"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.0.0",
    "nest-asyncio>=1.5.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
docs = [
    "pyyaml>=6.0.0",
]

[project.scripts]
dreamright = "dreamright.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
