[project]
name = "dreamright-workspace"
version = "0.1.0"
description = "AI-powered webtoon and short-form drama production - Monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dreamright-core-schemas",
    "dreamright-services",
    "dreamright-generators",
    "dreamright-storage",
    "dreamright-gemini-client",
    "dreamright-cli",
    "dreamright-api",
    "dreamright-viewer",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
docs = [
    "pyyaml>=6.0.0",
]

# No build-system for workspace root - it's just a coordinator

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*",
]

[tool.uv.sources]
dreamright-core-schemas = { workspace = true }
dreamright-services = { workspace = true }
dreamright-generators = { workspace = true }
dreamright-storage = { workspace = true }
dreamright-gemini-client = { workspace = true }
dreamright-cli = { workspace = true }
dreamright-api = { workspace = true }
dreamright-viewer = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
