[project]
name = "dreamright-viewer"
version = "0.1.0"
description = "Web-based webtoon viewer for DreamRight"
requires-python = ">=3.11"
dependencies = []  # Uses only stdlib

[project.scripts]
dreamright-viewer = "dreamright_viewer.viewer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamright_viewer"]
